Fix padding on small screen devices in project page

--- a/style.css
+++ b/style.css
@@ -200,6 +200,8 @@ footer a {
   .project-container {
     flex-direction: column;
     align-items: stretch;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .project-info {
